--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>Aishat Adewoyin's Portfolio Website</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="Aishats Portfolio" name="keywords">
+    <meta content="Aishats Portfolio" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -19,8 +19,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
+    <link href="libraries/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="libraries/lightbox/css/lightbox.min.css" rel="stylesheet">
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
@@ -579,7 +579,7 @@
                 <span class="px-3">|</span>
                 <a class="text-white" href="#">Help</a>
             </div>
-            <p class="m-0">&copy; <a class="text-white font-weight-bold" href="#">Domain Name</a>. All Rights Reserved. Designed by <a class="text-white font-weight-bold" href="https://htmlcodex.com">HTML Codex</a>
+            <p class="m-0">&copy; <a class="text-white font-weight-bold" href="#">Aishat Adewoyin's Portfolio Website</a>. All Rights Reserved. Designed and Developed by <a class="font-weight-bold text-info" href="https://github.com/Aishat452">Aishat Adewoyin</a>
             </p>
         </div>
     </div>
@@ -595,18 +595,18 @@
     <!-- JS Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/typed/typed.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="lib/isotope/isotope.pkgd.min.js"></script>
-    <script src="lib/lightbox/js/lightbox.min.js"></script>
+    <script src="libraries/typed/typed.min.js"></script>
+    <script src="libraries/easing/easing.min.js"></script>
+    <script src="libraries/waypoints/waypoints.min.js"></script>
+    <script src="libraries/owlcarousel/owl.carousel.min.js"></script>
+    <script src="libraries/isotope/isotope.pkgd.min.js"></script>
+    <script src="libraries/lightbox/js/lightbox.min.js"></script>
 
     <!-- Contact JS File -->
     <script src="mail/jqBootstrapValidation.min.js"></script>
     <script src="mail/contact.js"></script>
 
-    <!-- Template JS -->
+    <!-- Portfolio JS -->
     <script src="js/main.js"></script>
 </body>
 
