--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <a href="#blog" class="nav-item nav-link">Blog</a>
                 <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="" class="btn btn-outline-primary d-none d-lg-block">Hire Me</a>
+            <a href="#contact" class="btn btn-outline-primary d-none d-lg-block">Hire Me</a>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -85,7 +85,7 @@
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
                     <div class="typed-text d-none">Back End Engineer, ios Developer, Digital Marketer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                        <a href="CV/Aishat_Adeladun_Adewoyin_Tech_Resume.pdf" class="btn btn-outline-light mr-5">Download CV</a>
+                        <a href="CV/Aishat_Adeladun_Adewoyin_Tech_Resume.pdf" target="_blank" class="btn btn-outline-light mr-5">Download CV</a>
                         <button type="button" class="btn-play" data-toggle="modal"
                             data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-target="#videoModal">
                             <span></span>
@@ -518,7 +518,7 @@
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
                 <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Contacts</h1>
-                <h1 class="position-absolute text-uppercase text-primary">Contact Me</h1>
+                <h1 class="position-absolute text-uppercase text-center text-primary">Hi! How can i help you today?</h1>
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-8">
@@ -564,11 +564,12 @@
     <!-- Footer Start -->
     <div class="container-fluid bg-primary text-white mt-5 py-5 px-sm-3 px-md-5">
         <div class="container text-center py-5">
+            <h3 class="text-white font-weight-normal text-capitalize text-center mb-3">Reach out to me on social media</h3>
             <div class="d-flex justify-content-center mb-4">
-                <a class="btn btn-light btn-social mr-2" href="https://github.com/Aishat452" target="_blank"><i class="fab fa-github"></i></a>
-                <a class="btn btn-light btn-social mr-2" href="https://linkedin.com/in/AishatAdewoyin" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-light btn-social mr-2" href="https://twitter.com/AishaAdewoyin" target="_blank"><i class="fab fa-twitter"></i></a>
-                <a class="btn btn-light btn-social mr-2" href="https://facebook.com/AishatomoAdewoyin" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-light btn-social mr-3" href="https://github.com/Aishat452" target="_blank"><i class="fab fa-github"></i></a>
+                <a class="btn btn-light btn-social mr-3" href="https://linkedin.com/in/AishatAdewoyin" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a class="btn btn-light btn-social mr-3" href="https://twitter.com/AishaAdewoyin" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a class="btn btn-light btn-social" href="https://facebook.com/AishatomoAdewoyin" target="_blank"><i class="fab fa-facebook-f"></i></a>
             </div>
             <div class="d-flex justify-content-center mb-3">
                 <a class="text-white" href="#">Privacy</a>
@@ -579,7 +580,7 @@
                 <span class="px-3">|</span>
                 <a class="text-white" href="#">Help</a>
             </div>
-            <p class="m-0">&copy; <a class="text-white font-weight-bold" href="#">Aishat Adewoyin's Portfolio Website</a>. All Rights Reserved. Designed and Developed by <a class="font-weight-bold text-info" href="https://github.com/Aishat452">Aishat Adewoyin</a>
+            <p class="m-0">&copy; <a class="text-white font-weight-bold" href="#">Aisha's Portfolio</a>. All Rights Reserved. Designed and Developed by <a class="font-weight-bold text-info" href="https://github.com/Aishat452">Aishat Adewoyin</a>
             </p>
         </div>
     </div>
