services area updated

--- a/index.html
+++ b/index.html
@@ -343,54 +343,42 @@
                         <i class="fa fa-2x fa-laptop service-icon bg-primary text-white mr-3"></i>
                         <h4 class="font-weight-bold m-0">Front End Development</h4>
                     </div>
-                    <p>Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem lorem est amet
-                        labore eirmod erat clita</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
+                    <p>I create captivating user interfaces and seamless user experiences. With expertise in HTML, CSS, and JavaScript(ReactJS), I craft visually appealing and responsive websites, ensuring optimal performance across different devices. Let me bring your digital vision to life with my front-end development skills.</p>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
                         <i class="fa fa-2x fa-laptop-code service-icon bg-primary text-white mr-3"></i>
                         <h4 class="font-weight-bold m-0">Back End Development</h4>
                     </div>
-                    <p>Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem lorem est amet
-                        labore eirmod erat clita</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
+                    <p>Providing robust backend development services, I build scalable and efficient server-side solutions. With expertise in languages such as Python, JavaScript, C# and frameworks like Django, NodeJS and .NET, I develop secure and great-performance APIs, database management systems, and server logic. Let's empower your application with a reliable and powerful backend infrastructure.</p>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
                         <i class="fab fa-2x fa-apple service-icon bg-primary text-white mr-3"></i>
                         <h4 class="font-weight-bold m-0">ios Development</h4>
                     </div>
-                    <p>Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem lorem est amet
-                        labore eirmod erat clita</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
+                    <p>Unlocking the potential of iOS platforms, I offer comprehensive iOS development services. With a strong command of Swift and a deep understanding of the iOS ecosystem, I create captivating and feature-rich mobile applications that seamlessly integrate with the Apple ecosystem. From concept to App Store deployment, I am dedicated to delivering engaging and intuitive iOS experiences that captivate users.</p>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
                         <i class="fa fa-2x fa-search service-icon bg-primary text-white mr-3"></i>
                         <h4 class="font-weight-bold m-0">SEO</h4>
                     </div>
-                    <p>Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem lorem est amet
-                        labore eirmod erat clita</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
+                    <p>Boost your online presence and drive organic traffic with my SEO services. With expertise in keyword research, on-page optimization, and content strategy, I optimize your website to rank higher in search engine results. By implementing SEO best practices, I improve your website's visibility, increase targeted traffic, and help you reach your digital marketing goals. Let's optimize your online success through effective SEO strategies.</p>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
                         <i class="fa fa-2x fa-edit service-icon bg-primary text-white mr-3"></i>
-                        <h4 class="font-weight-bold m-0">Content Writting & Creation</h4>
+                        <h4 class="font-weight-bold m-0">Content Writing & Creation</h4>
                     </div>
-                    <p>Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem lorem est amet
-                        labore eirmod erat clita</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
+                    <p>As a skilled content writer and creator, I specialize in crafting captivating articles, blog posts, website copy, and social media content. With a deep understanding of target audiences and effective storytelling techniques, I deliver high-quality, SEO-friendly content that resonates with readers and drives engagement. Let's bring your brand's voice to life and create impactful content that connects with your audience.</p>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
                         <i class="fab fa-2x fa-android service-icon bg-primary text-white mr-3"></i>
                         <h4 class="font-weight-bold m-0">Tutoring</h4>
                     </div>
-                    <p>Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem lorem est amet
-                        labore eirmod erat clita</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
+                    <p>With a passion for teaching, I provide personalized tutoring services to beginner programmers. My goal is to help you grasp complex concepts, improve your understanding, and excel in your software development journey. I adapt my teaching methods to suit your individual learning style, creating a positive and encouraging environment for growth. Whether you need assistance in programming fundamentals or guidance in development, I'm here to empower you on your educational journey. Let's build a strong foundation and fuel your passion for coding.</p>
                 </div>
             </div>
         </div>
@@ -623,7 +611,7 @@
     <!-- Footer Start -->
     <div class="container-fluid bg-primary text-white mt-5 py-5 px-sm-3 px-md-5">
         <div class="container text-center py-5">
-            <h3 class="text-white font-weight-normal text-capitalize text-center mb-3">Reach out to me on social media
+            <h3 class="text-white font-weight-normal text-capitalize text-center mb-3">Reach out to me on <br> social media
             </h3>
             <div class="d-flex justify-content-center mb-4">
                 <a class="btn btn-light btn-social mr-3" href="https://github.com/Aishat452" target="_blank"><i
