--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <img class="img-fluid rounded w-100" src="img/about.jpg" alt="">
                 </div>
                 <div class="col-lg-7">
-                    <h3 class="mb-4">Back End Engineer, ios Developer</h3>
+                    <h3 class="mb-4">Back End Engineer, iOS Developer</h3>
                     <p>Hi! I'm Aisha, a passionate and driven software engineer with a focus on backend software
                         development and iOS app development. I have a strong foundation in languages such as C, Python,
                         JavaScript, Swift, PHP with some experience in C#.</p>
