--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
                             <h6>Address: <span class="text-secondary">Abuja, Nigeria</span></h6>
                         </div>
                     </div>
-                    <a href="" class="btn btn-outline-primary mr-4">Hire Me</a>
-                    <a href="" class="btn btn-outline-primary">Learn More</a>
+                    <a href="https://linkedin/in/aishatadewoyin" tager ="_blank"class="btn btn-outline-primary mr-4">Hire Me</a>
+                    <a href="https://github/Aishat452" tager ="_blank" class="btn btn-outline-primary">Learn More</a>
                 </div>
             </div>
         </div>
