--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-5 px-5 pl-lg-0 pb-5 pb-lg-0">
-                    <img class="img-fluid w-100 rounded-circle shadow-sm" src="img/profile.jpg" alt="">
+                    <img class="img-fluid w-100 rounded-circle shadow-sm" src="img/profile-2.jpg" alt="">
                 </div>
                 <div class="col-lg-7 text-center text-lg-left">
                     <h3 class="text-white font-weight-normal mb-3">Hi! I'm</h3>
@@ -162,8 +162,8 @@
                             <h6>Address: <span class="text-secondary">Abuja, Nigeria</span></h6>
                         </div>
                     </div>
-                    <a href="https://linkedin/in/aishatadewoyin" tager ="_blank"class="btn btn-outline-primary mr-4">Hire Me</a>
-                    <a href="https://github/Aishat452" tager ="_blank" class="btn btn-outline-primary">Learn More</a>
+                    <a href="https://www.linkedin.com/in/aishatadewoyin" tager ="_blank"class="btn btn-outline-primary mr-4">Hire Me</a>
+                    <a href="https://github.com/Aishat452" tager ="_blank" class="btn btn-outline-primary">Learn More</a>
                 </div>
             </div>
         </div>
@@ -355,7 +355,7 @@
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
                         <i class="fab fa-2x fa-apple service-icon bg-primary text-white mr-3"></i>
-                        <h4 class="font-weight-bold m-0">ios Development</h4>
+                        <h4 class="font-weight-bold m-0">iOS Development</h4>
                     </div>
                     <p>Unlocking the potential of iOS platforms, I offer comprehensive iOS development services. With a strong command of Swift and a deep understanding of the iOS ecosystem, I create captivating and feature-rich mobile applications that seamlessly integrate with the Apple ecosystem. From concept to App Store deployment, I am dedicated to delivering engaging and intuitive iOS experiences that captivate users.</p>
                 </div>
