--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Navbar Start -->
     <nav class="navbar fixed-top shadow-sm navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-lg-5">
         <a href="index.html" class="navbar-brand ml-lg-3">
-            <h1 class="m-0 display-5"><span class="text-primary">Ais</span>ha</h1>
+            <h1 class="m-0 display-5"><span class="text-primary">Ais</span>hah</h1>
         </a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -79,7 +79,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-5 px-5 pl-lg-0 pb-5 pb-lg-0">
-                    <img class="img-fluid w-100 rounded-circle shadow-sm" src="img/profile-2.jpg" alt="">
+                    <img class="img-fluid w-100 rounded-circle shadow-sm" src="img/profile-2.jpeg" alt="">
                 </div>
                 <div class="col-lg-7 text-center text-lg-left">
                     <h3 class="text-white font-weight-normal mb-3">Hi! I'm</h3>
@@ -236,7 +236,7 @@
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
                 <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Skills</h1>
-                <h1 class="position-absolute text-uppercase text-primary">Languages, Frameworks & Libraries</h1>
+                <h1 class="position-absolute text-uppercase languages-text text-primary">Languages, Frameworks & Libraries</h1>
             </div>
             <div class="row align-items-center">
                 <div class="col-md-6">
@@ -368,8 +368,8 @@
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
-                        <i class="fa fa-2x fa-edit service-icon bg-primary text-white mr-3"></i>
-                        <h4 class="font-weight-bold m-0">Content Writing & Creation</h4>
+                        <i class="fa fa-2x fa-edit service-icon bg-primary text-white mr-lg-3 mr-md-3"></i>
+                        <h4 class="font-weight-bold content-creation m-0">Content Writing & Creation</h4>
                     </div>
                     <p>As a skilled content writer and creator, I specialize in crafting captivating articles, blog posts, website copy, and social media content. With a deep understanding of target audiences and effective storytelling techniques, I deliver high-quality, SEO-friendly content that resonates with readers and drives engagement. Let's bring your brand's voice to life and create impactful content that connects with your audience.</p>
                 </div>
@@ -560,7 +560,7 @@
 
 
     <!-- Contact Start -->
-    <!--<div class="container-fluid py-5" id="contact">
+    <div class="container-fluid py-5" id="contact">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
                 <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Contacts</h1>
@@ -604,7 +604,7 @@
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
     <!-- Contact End -->
 
 
