--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                 <a href="#about" class="nav-item nav-link">About</a>
                 <!-- <a href="#qualification" class="nav-item nav-link">Quality</a> -->
                 <a href="#skill" class="nav-item nav-link">Skill</a>
-                <a href="#service" class="nav-item nav-link">Service</a>
                 <a href="#portfolio" class="nav-item nav-link">Portfolio</a>
+                <a href="#service" class="nav-item nav-link">Service</a>
                 <!-- <a href="#testimonial" class="nav-item nav-link">Review</a> -->
                 <a href="#blog" class="nav-item nav-link">Blog</a>
                 <a href="#contact" class="nav-item nav-link">Contact</a>
@@ -79,7 +79,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-5 px-5 pl-lg-0 pb-5 pb-lg-0">
-                    <img class="img-fluid w-100 rounded-circle shadow-sm" src="img/profile-2.jpeg" alt="">
+                    <img class="img-fluid w-100 rounded-circle shadow-sm" src="img/mypicture.jpg" alt="">
                 </div>
                 <div class="col-lg-7 text-center text-lg-left">
                     <h3 class="text-white font-weight-normal mb-3">Hi! I'm</h3>
@@ -112,7 +112,7 @@
             </div>
             <div class="row align-items-center">
                 <div class="col-lg-5 pb-4 pb-lg-0">
-                    <img class="img-fluid rounded w-100" src="img/about.jpg" alt="">
+                    <img class="img-fluid rounded w-100" src="img/mypicture1.jpeg" alt="">
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">Back End Engineer, iOS Developer</h3>
