ajax validations still on

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     </div>
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-bold">CSS</h6>
+                            <h6 class="font-weight-bold">CSS (SCSS, Bootstrap 5)</h6>
                             <h6 class="font-weight-bold">95%</h6>
                         </div>
                         <div class="progress">
@@ -200,7 +200,7 @@
                     </div>
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-bold">ReactJS</h6>
+                            <h6 class="font-weight-bold">Javascript (ReactJS)</h6>
                             <h6 class="font-weight-bold">80%</h6>
                         </div>
                         <div class="progress">
@@ -223,7 +223,7 @@
                 <div class="col-md-6">
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-bold">Javascript (NodeJS)</h6>
+                            <h6 class="font-weight-bold">NodeJS, ExpressJS</h6>
                             <h6 class="font-weight-bold">95%</h6>
                         </div>
                         <div class="progress">
@@ -499,11 +499,11 @@
                     <div class="position-relative mb-4">
                         <img class="img-fluid rounded w-100" src="my_Portfolio/img/blog-1.jpg" alt="">
                         <div class="blog-date">
-                            <h4 class="font-weight-bold mb-n1">01</h4>
-                            <small class="text-white text-uppercase">Jan</small>
+                            <h4 class="font-weight-bold mb-n1">15</h4>
+                            <small class="text-white text-uppercase">Mar</small>
                         </div>
                     </div>
-                    <h5 class="font-weight-medium mb-4">Rebum lorem no eos ut ipsum diam tempor sed rebum elitr ipsum
+                    <h5 class="font-weight-medium mb-4">Coming soon
                     </h5>
                     <a class="btn btn-sm btn-outline-primary py-2" href="">Read More</a>
                 </div>
@@ -512,10 +512,10 @@
                         <img class="img-fluid rounded w-100" src="my_Portfolio/img/blog-2.jpg" alt="">
                         <div class="blog-date">
                             <h4 class="font-weight-bold mb-n1">01</h4>
-                            <small class="text-white text-uppercase">Jan</small>
+                            <small class="text-white text-uppercase">May</small>
                         </div>
                     </div>
-                    <h5 class="font-weight-medium mb-4">Rebum lorem no eos ut ipsum diam tempor sed rebum elitr ipsum
+                    <h5 class="font-weight-medium mb-4">Coming soon
                     </h5>
                     <a class="btn btn-sm btn-outline-primary py-2" href="">Read More</a>
                 </div>
@@ -523,11 +523,11 @@
                     <div class="position-relative mb-4">
                         <img class="img-fluid rounded w-100" src="my_Portfolio/img/blog-3.jpg" alt="">
                         <div class="blog-date">
-                            <h4 class="font-weight-bold mb-n1">01</h4>
+                            <h4 class="font-weight-bold mb-n1">13</h4>
                             <small class="text-white text-uppercase">Jan</small>
                         </div>
                     </div>
-                    <h5 class="font-weight-medium mb-4">Rebum lorem no eos ut ipsum diam tempor sed rebum elitr ipsum
+                    <h5 class="font-weight-medium mb-4">Coming soon
                     </h5>
                     <a class="btn btn-sm btn-outline-primary py-2" href="">Read More</a>
                 </div>
