--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                 <a href="#blog" class="nav-item nav-link">Blog</a>
                 <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="https://www.linkedin.com/in/aishatadewoyin" target="_blank" class="btn btn-outline-primary d-none d-lg-block">Hire Me</a>
+            <a href="https://www.linkedin.com/in/aishatadewoyin" target="_blank"
+                class="btn btn-outline-primary d-none d-lg-block">Hire Me</a>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -108,7 +109,7 @@
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
                 <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">About</h1>
-                <h1 class="position-absolute text-uppercase text-primary">Little About Me</h1>
+                <h1 class="position-absolute text-uppercase text-center text-primary">Little About Me</h1>
             </div>
             <div class="row align-items-center">
                 <div class="col-lg-5 pb-4 pb-lg-0">
@@ -160,8 +161,10 @@
                             <h6>Address: <span class="text-secondary">Abuja, Nigeria</span></h6>
                         </div>
                     </div>
-                    <a href="https://www.linkedin.com/in/aishatadewoyin" target ="_blank" class="btn btn-outline-primary mr-4">Hire Me</a>
-                    <a href="https://github.com/Aishat452" target ="_blank" class="btn btn-outline-primary">Learn More</a>
+                    <a href="https://www.linkedin.com/in/aishatadewoyin" target="_blank"
+                        class="btn btn-outline-primary mr-4">Hire Me</a>
+                    <a href="https://github.com/Aishat452" target="_blank" class="btn btn-outline-primary">Learn
+                        More</a>
                 </div>
             </div>
         </div>
@@ -174,7 +177,8 @@
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
                 <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Skills</h1>
-                <h1 class="position-absolute text-uppercase languages-text text-primary">Languages, Frameworks & Libraries</h1>
+                <h1 class="position-absolute text-uppercase languages-text text-primary">Languages, Frameworks &
+                    Libraries</h1>
             </div>
             <div class="row align-items-center">
                 <div class="col-md-6">
@@ -272,7 +276,7 @@
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
                 <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Gallery</h1>
-                <h1 class="position-absolute text-uppercase text-primary">My Portfolio Gallery</h1>
+                <h1 class="position-absolute text-uppercase text-center text-primary">My Portfolio Gallery</h1>
             </div>
             <div class="row">
                 <div class="col-12 text-center mb-2">
@@ -335,7 +339,7 @@
                             </a>
                         </div>
                     </div>
-                </div>               
+                </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
                     <div class="position-relative overflow-hidden mb-2">
                         <img class="img-fluid rounded w-100 portimg" src="my_Portfolio/img/portfolio-5.jpg" alt="">
@@ -348,7 +352,8 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
                     <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100 portimg" src="my_Portfolio/img/kaltumcorridor_featured.jpg" alt="">
+                        <img class="img-fluid rounded w-100 portimg" src="my_Portfolio/img/kaltumcorridor_featured.jpg"
+                            alt="">
                         <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                             <a href="my_Portfolio/img/kaltumcorridor_featured.jpg" data-lightbox="portfolio">
                                 <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
@@ -368,7 +373,8 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item forth">
                     <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100 portimg" src="my_Portfolio/img/digitaladexpert_certificate.jpg" alt="">
+                        <img class="img-fluid rounded w-100 portimg"
+                            src="my_Portfolio/img/digitaladexpert_certificate.jpg" alt="">
                         <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                             <a href="my_Portfolio/img/digitaladexpert_certificate.jpg" data-lightbox="portfolio">
                                 <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
@@ -405,42 +411,66 @@
                         <i class="fa fa-2x fa-laptop service-icon bg-primary text-white mr-3"></i>
                         <h4 class="font-weight-bold m-0">Front End Development</h4>
                     </div>
-                    <p>I create captivating user interfaces and seamless user experiences. With expertise in HTML, CSS, and JavaScript(ReactJS), I craft visually appealing and responsive websites, ensuring optimal performance across different devices. Let me bring your digital vision to life with my front-end development skills.</p>
+                    <p>I create captivating user interfaces and seamless user experiences. With expertise in HTML, CSS,
+                        and JavaScript(ReactJS), I craft visually appealing and responsive websites, ensuring optimal
+                        performance across different devices. Let me bring your digital vision to life with my front-end
+                        development skills.</p>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
                         <i class="fa fa-2x fa-laptop-code service-icon bg-primary text-white mr-3"></i>
                         <h4 class="font-weight-bold m-0">Back End Development</h4>
                     </div>
-                    <p>Providing robust backend development services, I build scalable and efficient server-side solutions. With expertise in languages such as Python, JavaScript, C# and frameworks like Django, NodeJS and .NET, I develop secure and great-performance APIs, database management systems, and server logic. Let's empower your application with a reliable and powerful backend infrastructure.</p>
+                    <p>Providing robust backend development services, I build scalable and efficient server-side
+                        solutions. With expertise in languages such as Python, JavaScript, C# and frameworks like
+                        Django, NodeJS and .NET, I develop secure and great-performance APIs, database management
+                        systems, and server logic. Let's empower your application with a reliable and powerful backend
+                        infrastructure.</p>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
                         <i class="fab fa-2x fa-apple service-icon bg-primary text-white mr-3"></i>
                         <h4 class="font-weight-bold m-0">iOS Development</h4>
                     </div>
-                    <p>Unlocking the potential of iOS platforms, I offer comprehensive iOS development services. With a strong command of Swift and a deep understanding of the iOS ecosystem, I create captivating and feature-rich mobile applications that seamlessly integrate with the Apple ecosystem. From concept to App Store deployment, I am dedicated to delivering engaging and intuitive iOS experiences that captivate users.</p>
+                    <p>Unlocking the potential of iOS platforms, I offer comprehensive iOS development services. With a
+                        strong command of Swift and a deep understanding of the iOS ecosystem, I create captivating and
+                        feature-rich mobile applications that seamlessly integrate with the Apple ecosystem. From
+                        concept to App Store deployment, I am dedicated to delivering engaging and intuitive iOS
+                        experiences that captivate users.</p>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
                         <i class="fa fa-2x fa-search service-icon bg-primary text-white mr-3"></i>
                         <h4 class="font-weight-bold m-0">SEO</h4>
                     </div>
-                    <p>Boost your online presence and drive organic traffic with my SEO services. With expertise in keyword research, on-page optimization, and content strategy, I optimize your website to rank higher in search engine results. By implementing SEO best practices, I improve your website's visibility, increase targeted traffic, and help you reach your digital marketing goals. Let's optimize your online success through effective SEO strategies.</p>
+                    <p>Boost your online presence and drive organic traffic with my SEO services. With expertise in
+                        keyword research, on-page optimization, and content strategy, I optimize your website to rank
+                        higher in search engine results. By implementing SEO best practices, I improve your website's
+                        visibility, increase targeted traffic, and help you reach your digital marketing goals. Let's
+                        optimize your online success through effective SEO strategies.</p>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
                         <i class="fa fa-2x fa-edit service-icon bg-primary text-white mr-lg-3 mr-md-3"></i>
                         <h4 class="font-weight-bold content-creation m-0">Content Writing & Creation</h4>
                     </div>
-                    <p>As a skilled content writer and creator, I specialize in crafting captivating articles, blog posts, website copy, and social media content. With a deep understanding of target audiences and effective storytelling techniques, I deliver high-quality, SEO-friendly content that resonates with readers and drives engagement. Let's bring your brand's voice to life and create impactful content that connects with your audience.</p>
+                    <p>As a skilled content writer and creator, I specialize in crafting captivating articles, blog
+                        posts, website copy, and social media content. With a deep understanding of target audiences and
+                        effective storytelling techniques, I deliver high-quality, SEO-friendly content that resonates
+                        with readers and drives engagement. Let's bring your brand's voice to life and create impactful
+                        content that connects with your audience.</p>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
                         <i class="fab fa-2x fa-android service-icon bg-primary text-white mr-3"></i>
                         <h4 class="font-weight-bold m-0">Tutoring</h4>
                     </div>
-                    <p>With a passion for teaching, I provide personalized tutoring services to beginner programmers. My goal is to help you grasp complex concepts, improve your understanding, and excel in your software development journey. I adapt my teaching methods to suit your individual learning style, creating a positive and encouraging environment for growth. Whether you need assistance in programming fundamentals or guidance in development, I'm here to empower you on your educational journey. Let's build a strong foundation and fuel your passion for coding.</p>
+                    <p>With a passion for teaching, I provide personalized tutoring services to beginner programmers. My
+                        goal is to help you grasp complex concepts, improve your understanding, and excel in your
+                        software development journey. I adapt my teaching methods to suit your individual learning
+                        style, creating a positive and encouraging environment for growth. Whether you need assistance
+                        in programming fundamentals or guidance in development, I'm here to empower you on your
+                        educational journey. Let's build a strong foundation and fuel your passion for coding.</p>
                 </div>
             </div>
         </div>
@@ -542,44 +572,22 @@
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
                 <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Contacts</h1>
-                <h1 class="position-absolute text-uppercase text-center text-primary">Hi! How can i help you today?</h1>
+                <h2 class="position-absolute text-uppercase text-center text-primary">Reach out to me via<br> social
+                    media or email</h2>
             </div>
-            <div class="row justify-content-center">
-                <div class="col-lg-8">
-                    <div class="contact-form text-center">
-                        <div id="success"></div>
-                        <form name="sentMessage" id="contactForm" novalidate="novalidate">
-                            <div class="form-row">
-                                <div class="control-group col-sm-6">
-                                    <input type="text" class="form-control p-4" id="name" placeholder="Your Name"
-                                        required="required" data-validation-required-message="Please enter your name" />
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="control-group col-sm-6">
-                                    <input type="email" class="form-control p-4" id="email" placeholder="Your Email"
-                                        required="required"
-                                        data-validation-required-message="Please enter your email" />
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="control-group">
-                                <input type="text" class="form-control p-4" id="subject" placeholder="Subject"
-                                    required="required" data-validation-required-message="Please enter a subject" />
-                                <p class="help-block text-danger"></p>
-                            </div>
-                            <div class="control-group">
-                                <textarea class="form-control py-3 px-4" rows="5" id="message" placeholder="Message"
-                                    required="required"
-                                    data-validation-required-message="Please enter your message"></textarea>
-                                <p class="help-block text-danger"></p>
-                            </div>
-                            <div>
-                                <button class="btn btn-outline-primary" type="submit" id="sendMessageButton">Send
-                                    Message</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
+            <div class="d-flex justify-content-center mb-4">
+                <a class="btn btn-dark btn-social mr-2" href="https://github.com/Aishat452" target="_blank"><i
+                        class="fab fa-github"></i></a>
+                <a class="btn btn-dark btn-social mr-2" href="https://linkedin.com/in/AishatAdewoyin" target="_blank"><i
+                        class="fab fa-linkedin-in"></i></a>
+                <a class="btn btn-dark btn-social mr-2" href="https://twitter.com/AishaAdewoyin" target="_blank"><i
+                        class="fab fa-twitter"></i></a>
+                <a class="btn btn-dark btn-social mr-2" href="https://facebook.com/AishatomoAdewoyin" target="_blank"><i
+                        class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-dark btn-social" href="mailto:aishatadewoyin@icloud.com" target="_blank">
+                    <i class="fas fa-envelope"></i>
+                </a>
+
             </div>
         </div>
     </div>
@@ -589,18 +597,6 @@
     <!-- Footer Start -->
     <div class="container-fluid bg-primary text-white mt-5 py-5 px-sm-3 px-md-5">
         <div class="container text-center py-5">
-            <h3 class="text-white font-weight-normal text-capitalize text-center mb-3">Reach out to me on <br> social media
-            </h3>
-            <div class="d-flex justify-content-center mb-4">
-                <a class="btn btn-light btn-social mr-3" href="https://github.com/Aishat452" target="_blank"><i
-                        class="fab fa-github"></i></a>
-                <a class="btn btn-light btn-social mr-3" href="https://linkedin.com/in/AishatAdewoyin"
-                    target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-light btn-social mr-3" href="https://twitter.com/AishaAdewoyin" target="_blank"><i
-                        class="fab fa-twitter"></i></a>
-                <a class="btn btn-light btn-social" href="https://facebook.com/AishatomoAdewoyin" target="_blank"><i
-                        class="fab fa-facebook-f"></i></a>
-            </div>
             <div class="d-flex justify-content-center mb-3">
                 <a class="text-white" href="#">Privacy</a>
                 <span class="px-3">|</span>
@@ -612,7 +608,7 @@
             </div>
             <p class="m-0">&copy; <a class="text-white font-weight-bold" href="#">Aisha's Portfolio</a>. All Rights
                 Reserved. Designed and Developed by <a class="font-weight-bold text-info"
-                    href="https://github.com/Aishat452">Aishat Adewoyin</a>
+                    href="https://github.com/Aishat452" target="_blank">Aishat Adewoyin</a>
             </p>
         </div>
     </div>
